--- a/Homepage.html
+++ b/Homepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="manifest" href="./manifest.json">
     <title>Weather app by Igor Strzezysz</title>
 </head>
 <body>
@@ -17,7 +18,25 @@
           <p id="forecast"></p>
           <img id="weather-icon" src="./Images/WeatherIcon.png" alt="Pogoda">
         </div>
-      </div>
+    </div>
+    
     <script src="./headJS.js"></script>
+    <script>
+      // Sprawdź, czy przeglądarka obsługuje Service Workery
+      if ('serviceWorker' in navigator) {
+        // Zarejestruj Service Workera po załadowaniu strony
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js') // ścieżka do pliku sw.js
+            .then((registration) => {
+              console.log('Service Worker zarejestrowany z sukcesem:', registration);
+            })
+            .catch((error) => {
+              console.log('Błąd rejestracji Service Workera:', error);
+            });
+        });
+      } else {
+        console.log('Service Worker nie jest obsługiwany w tej przeglądarce.');
+      }
+    </script>
 </body>
 </html>
