--- a/Homepage.html
+++ b/Homepage.html
@@ -13,30 +13,14 @@
         <input type="text" id="location-input" placeholder="Wpisz miasto...">
         <button id="search-btn">Sprawdź</button>
         <div id="weather-info">
-          <h2 id="city"></h2>
-          <p id="temperature"></p>
-          <p id="forecast"></p>
-          <img id="weather-icon" src="./Images/WeatherIcon.png" alt="Pogoda">
+            <h2 id="city"></h2>
+            <p id="temperature"></p>
+            <p id="forecast"></p>
+            <img id="weather-icon" src="./Images/WeatherIcon.png" alt="Pogoda">
         </div>
     </div>
     
     <script src="./headJS.js"></script>
-    <script>
-      // Sprawdź, czy przeglądarka obsługuje Service Workery
-      if ('serviceWorker' in navigator) {
-        // Zarejestruj Service Workera po załadowaniu strony
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js') // ścieżka do pliku sw.js
-            .then((registration) => {
-              console.log('Service Worker zarejestrowany z sukcesem:', registration);
-            })
-            .catch((error) => {
-              console.log('Błąd rejestracji Service Workera:', error);
-            });
-        });
-      } else {
-        console.log('Service Worker nie jest obsługiwany w tej przeglądarce.');
-      }
-    </script>
+    <script src="./app.js"></script> 
 </body>
 </html>
