--- a/public/Homepage.html
+++ b/public/Homepage.html
@@ -16,11 +16,9 @@
             <h2 id="city"></h2>
             <p id="temperature"></p>
             <p id="forecast"></p>
-            <img id="weather-icon" src="./Images/WeatherIcon.png" alt="Pogoda">
+            <img id="weather-icon" src="./image/weatheIcon.webp" alt="Pogoda">
         </div>
     </div>
-    
-    <script src="./headJS.js"></script>
-    <script src="./app.js"></script> 
+    <script src="./headJS.js"></script> 
 </body>
 </html>
