--- a/public/Homepage.html
+++ b/public/Homepage.html
@@ -9,14 +9,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sprawdź pogodę</h1>
-        <input type="text" id="location-input" placeholder="Wpisz miasto...">
-        <button id="search-btn">Sprawdź</button>
-        <div id="weather-info">
+        <h1 class="checkWheater">Sprawdź pogodę</h1>
+        <input class="searchBar" type="text" id="location-input" placeholder="Wpisz miasto...">
+        <button class="searchBtn">Sprawdź</button>
+        <div class="weatherInfo">
             <h2 id="city"></h2>
             <p id="temperature"></p>
             <p id="forecast"></p>
             <img id="weather-icon" src="./image/weatheIcon.webp" alt="Pogoda">
+            <button class="wheaterDetails">
+            <p>Szczegóły pogody</p>
+            </button>
         </div>
     </div>
     <script src="./headJS.js"></script> 
