Nowy commit nowe poprawki

--- a/public/Homepage.html
+++ b/public/Homepage.html
@@ -21,6 +21,12 @@
             <p>Szczegóły pogody</p>
             </button>
         </div>
+        <div class="WheaterMoreDetails">
+            <h2>Szczegóły pogody:</h2>
+            <p>Wiatr</p>
+            <p>Temperatura</p>
+            <button>Dodaj do ulubionych</button>
+        </div>
     </div>
     <script src="./headJS.js"></script> 
 </body>
