--- a/public/Homepage.html
+++ b/public/Homepage.html
@@ -17,15 +17,14 @@
             <p id="temperature"></p>
             <p id="forecast"></p>
             <img id="weather-icon" src="./image/weatheIcon.webp" alt="Pogoda">
-            <button class="wheaterDetails">
-            <p>Szczegóły pogody</p>
-            </button>
+            <button class="wheaterDetails">Szczegóły pogody</button>
         </div>
         <div class="WheaterMoreDetails">
             <h2>Szczegóły pogody:</h2>
             <p>Wiatr</p>
             <p>Temperatura</p>
-            <button>Dodaj do ulubionych</button>
+            <button class="favoriteButton">Dodaj do ulubionych</button>
+            <button class="goBackButton">Powrót</button>
         </div>
     </div>
     <script src="./headJS.js"></script> 
